--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 
 	<body>
-		<h1>COOL background</h>
-		<p>lorem23</p>
+			<h1>COOL background</h1>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, obcaecati. Repellat, atque id distinctio quaerat praesentium iusto voluptates quas repudiandae autem eligendi architecto expedita quisquam, odio, reiciendis vero rem totam assumenda cumque!</p>
+			<p>lorem23</p>
 	</body>
 </html>
